--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to my website</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+    <div id="title-wrapper"><h1>Coming Soon......</h1></div>
+</body>
+</html>
