--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <title>Welcome to my website</title>
+    <link href='http://fonts.googleapis.com/css?family=Work+Sans:500' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <div id="title-wrapper"><h1>Coming Soon......</h1></div>
+<div id="title-wrapper"><h1>Coming Soon......</h1></div>
+<div class="icons">
+    <a href="https://www.facebook.com/ahmed.m.elhanafy" class="fa fa-facebook-square"></a>
+    <a href="https://plus.google.com/+AhmedMagdy95/posts" class="fa fa-google-plus-square"></a>
+    <a href="https://twitter.com/ahmedlhanafy" class="fa fa-twitter-square"></a>
+    <a href="https://instagram.com/ahmedmagdy/" class="fa fa-instagram"></a>
+</div>
 </body>
 </html>
