--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to my website</title>
     <link href='http://fonts.googleapis.com/css?family=Work+Sans:500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -13,6 +14,9 @@
     <a href="https://plus.google.com/+AhmedMagdy95/posts" class="fa fa-google-plus-square"></a>
     <a href="https://twitter.com/ahmedlhanafy" class="fa fa-twitter-square"></a>
     <a href="https://instagram.com/ahmedmagdy/" class="fa fa-instagram"></a>
+    <!--<a href="https://docs.google.com/document/d/15te6jXbuDWX5HcYSR1gpYkf2dynANEdxfWYGNyXCtfM/edit?usp=sharing"-->
+       <!--class="fa fa-file"></a>-->
+    <!--<img class="play-store-icon" src="img/google-play-icon.png">-->
 </div>
 </body>
 </html>
