--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#327161">
     <title>Welcome to my website</title>
     <link href='http://fonts.googleapis.com/css?family=Work+Sans:500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 <body>
 <div id="title-wrapper"><h1>Coming Soon......</h1></div>
